ID User decrement error for Shapes on Bones when playing in BGE #37289

Closed
opened 2013-11-01 17:23:33 +01:00 by Daniele De Luca · 5 comments

Relates to: #31522

%%%Windows 7 64bit - Ubuntu 13.04 64 bit
Ge Force GTX570

This bug affects Blender 2.67, 2.68a, 2.69RC1, 2.69svn
Work into Blender 2.66

If I create any armature with shapes and then play in the game engine the bone shapes have this ID User decrement error, and if I play two times(the user count goes to 0), save and reload the file it will remove any shape object from scene.
In console the error is:
"ID user decrement error: (here shape names)"

Steps to reproduce with a new file:

  • Create a new file
  • create a new shape (a circle bezier should be fine) or new mesh (a cube)
  • Is the shape is bezier, convert it into mesh (ALT+C)
  • Create a new armature
  • Select Bone
  • Bone panel
  • Display -> Custom shape: assign the created shape
  • Select the shape and check the number of users for that object, should be 2
  • Press P to play, ESC and check the users(deselect and reselect the original shape), should be one. P again and we are at 0 user
  • If you save and reload the file, the shape will be gone forever...

Steps to reproduce with the attached blend:

  • Select a shape and check the number of users for that object, should be 2
  • Press P to play, ESC and check the shape users(deselect and reselect a shape), should be one. P again and we are at 0 user
  • If you save and reload the file, the shape will be gone forever... %%%
**Relates to**: #31522 %%%Windows 7 64bit - Ubuntu 13.04 64 bit Ge Force GTX570 This bug affects Blender 2.67, 2.68a, 2.69RC1, 2.69svn Work into Blender 2.66 If I create any armature with shapes and then play in the game engine the bone shapes have this ID User decrement error, and if I play two times(the user count goes to 0), save and reload the file it will remove any shape object from scene. In console the error is: "ID user decrement error: (here shape names)" Steps to reproduce with a new file: - Create a new file - create a new shape (a circle bezier should be fine) or new mesh (a cube) - Is the shape is bezier, convert it into mesh (ALT+C) - Create a new armature - Select Bone - Bone panel - Display -> Custom shape: assign the created shape - Select the shape and check the number of users for that object, should be 2 - Press P to play, ESC and check the users(deselect and reselect the original shape), should be one. P again and we are at 0 user - If you save and reload the file, the shape will be gone forever... ``` ``` Steps to reproduce with the attached blend: - Select a shape and check the number of users for that object, should be 2 - Press P to play, ESC and check the shape users(deselect and reselect a shape), should be one. P again and we are at 0 user - If you save and reload the file, the shape will be gone forever... %%%

Changed status to: 'Open'

Changed status to: 'Open'

This issue was referenced by blender/blender-addons-contrib@2b0162b622

This issue was referenced by blender/blender-addons-contrib@2b0162b6226df9dcb9b6819ce93f2d434afc69c4

This issue was referenced by 2b0162b622

This issue was referenced by 2b0162b6226df9dcb9b6819ce93f2d434afc69c4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2b0162b622.

Closed by commit 2b0162b622.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37289
No description provided.