source/gameengine/Converter/BL_ArmatureObject.cpp
@@ -42,6 +42,7 @@
 #include "BIK_api.h"
 #include "BKE_action.h"
 #include "BKE_armature.h"
+#include "BKE_library.h"
 
 #include "BKE_constraint.h"
 #include "CTR_Map.h"
@@ -118,6 +119,10 @@ void game_copy_pose(bPose **dst, bPose *src, int copy_constraint)
 		} else {
 			pchan->constraints.first = NULL;
 			pchan->constraints.last = NULL;
+		}
+
+		if (pchan->custom) {
+			id_us_plus(&pchan->custom->id);
 		}
 
 		// fails to link, props are not used in the BGE yet.
